fix(login):improve the layout of login box when the window size is too small

--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -44,7 +44,7 @@ a {
 }
 
 #app {
-  min-width: 1200px;
+  min-width: 600px;
   margin: 0 auto;
 }
 
